# Python-Project-From-Zero

./: .pre-commit-config.yaml  .pre-commit-config.yml  .pylintrc  README.md  main.py  pyproject.toml  setup.cfg
.github/workflows/: python-workflow.yml
app/: app.py  goodbye.py  grettings.py
config/: requirements.txt
tests/: test_goodbye.py  test_grettings.py
