[metadata]
name = title project
author = author_name
version = 1.0
description = project description
long_description = file: README.md
keywords = project keywords

# python versions for use project 
[options]
python_requires = 
    >=3.7,
    <4

# packages for use project
[options.extra_require]
install_requires = -r config.requirements.txt
test = pytest 

